[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Universal TUI file viewer — read-only preview of any office/text/data file, launches the right editor. Config-driven, expandable. Part of the Fe2O3 Rust terminal suite."
license = "Unlicense"
repository = "https://github.com/isene/viewer"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }  # inline images (kitty/sixel)
highlight = { version = "0.1", path = "../highlight", package = "fe2o3-highlight" }  # syntax highlighting
calamine = "0.26"  # spreadsheet table view (cold path)

[profile.release]
opt-level = 3
lto = true
strip = true
